RESOLVED FIXED289527
[IFC] Do not try to populate breaking position cache with invalid content
https://bugs.webkit.org/show_bug.cgi?id=289527
Summary [IFC] Do not try to populate breaking position cache with invalid content
alan
Reported 2025-03-11 07:13:20 PDT
Attachments
Patch (4.59 KB, patch)
2025-03-11 07:34 PDT, alan
ews-feeder: commit-queue-
[fast-cq]Patch (3.48 KB, patch)
2025-03-11 09:29 PDT, alan
no flags
alan
Comment 1 2025-03-11 07:34:53 PDT
alan
Comment 2 2025-03-11 09:29:39 PDT
Created attachment 474521 [details] [fast-cq]Patch
EWS
Comment 3 2025-03-11 20:42:58 PDT
Committed 291996@main (99a63dae8f1e): <https://commits.webkit.org/291996@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 474521 [details].
Note You need to log in before you can comment on or make changes to this bug.